dding to git ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ account_or_credit_statements/cibc_costco_mastercard_04_2024_to_05_2025.csv
 account_or_credit_statements/eq_bank_account_april_2025_to_may_10_2025.csv
 account_or_credit_statements/simplii_checking_may_2024_to_may_2025.csv
 account_or_credit_statements/td_visa_dec_2024_to_jan_2025.csv
+.DS_store
